<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center">

    <androidx.appcompat.widget.AppCompatEditText
        android:layout_marginTop="16dp"
        android:id="@+id/inputUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/hint_UserName"/>

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/inputPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:inputType="textPassword"
        android:hint="@string/hint_Password"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/buttonLogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:backgroundTint="@color/colorPrimary"
        android:layout_marginRight="56dp"
        android:layout_marginLeft="56dp"
        android:layout_marginStart="56dp"
        android:layout_marginEnd="56dp"
        android:textColor="@android:color/white"
        android:text="@string/text_login"/>

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/labelCreateAccount"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAllCaps="true"
        android:layout_marginTop="8dp"
        android:text="@string/label_create_new_account"/>

</LinearLayout>